--- a/WebBTL/Areas/Admin/Views/AdminPages/Create.cshtml
+++ b/WebBTL/Areas/Admin/Views/AdminPages/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Edit", "AdminPages", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
