--- a/WebBTL/Areas/Admin/Views/AdminProducts/Edit.cshtml
+++ b/WebBTL/Areas/Admin/Views/AdminProducts/Edit.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <h2>Edit</h2>
 
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Edit", "AdminProducts", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
@@ -69,10 +69,21 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Thumb, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input type="file" name="Thumb" class="form-control-file" accept="image/*" style="width:auto;" />
+            <!-- Display the current image or default image if Thumb is empty -->
+            <div>
+                <img src="@Url.Content(string.IsNullOrEmpty(Model.Thumb) ? "~/Content/images/default.png" : Model.Thumb)" alt="Product Image" style="max-width:200px;" />
+            </div>
+
+            <!-- File input for uploading a new image -->
+            <input type="file" name="image" id="image" class="form-control-file" accept="image/*" />
+
+            <!-- Validation message for the Thumb property -->
             @Html.ValidationMessageFor(model => model.Thumb, "", new { @class = "text-danger" })
         </div>
     </div>
+
+
+
 
     <div class="form-group">
         @Html.LabelFor(model => model.Video, htmlAttributes: new { @class = "control-label col-md-2" })
