--- a/WebBTL/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebBTL/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -337,10 +337,7 @@
                                     @Html.ActionLink("Tài khoản", "Index", "AdminAccounts", null, new { @class = "nav-link" })
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../../index2.html" class="nav-link">
-
-                                        <p>Danh mục</p>
-                                    </a>
+                                    @Html.ActionLink("Danh mục", "Index", "AdminCategories", null, new { @class = "nav-link" })
                                 </li>
                                 <li class="nav-item">
                                     @Html.ActionLink("Quyền truy cập", "Index", "AdminRoles", null, new { @class = "nav-link" })
