--- a/WebBTL/Views/Home/Index.cshtml
+++ b/WebBTL/Views/Home/Index.cshtml
@@ -31,7 +31,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Service</a>
                             </li>
-
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Tin tức</a>
+                            </li>
                         </ul>
                         <div class="d-flex justify-content-center align-items-center gap-3">
                             <a href="#" class="text-decoration-none text-black">Login</a>
