--- a/WebBTL/Areas/Admin/Views/AdmintblTinTucs/Create.cshtml
+++ b/WebBTL/Areas/Admin/Views/AdmintblTinTucs/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "AdmintblTinTucs", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -50,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Thumb, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Thumb, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="file" name="image" id="image" class="form-control-file" accept="image/*" style="width:auto;" />
                 @Html.ValidationMessageFor(model => model.Thumb, "", new { @class = "text-danger" })
             </div>
         </div>
